[gd_scene load_steps=3 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://Piece.tscn" type="PackedScene" id=2]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="Piece1" parent="." instance=ExtResource( 2 )]

[node name="Piece2" parent="." instance=ExtResource( 2 )]

[node name="Piece3" parent="." instance=ExtResource( 2 )]

[node name="Piece4" parent="." instance=ExtResource( 2 )]

[node name="Piece5" parent="." instance=ExtResource( 2 )]

[node name="Piece6" parent="." instance=ExtResource( 2 )]

[node name="Piece7" parent="." instance=ExtResource( 2 )]

[node name="Piece8" parent="." instance=ExtResource( 2 )]

[node name="Piece9" parent="." instance=ExtResource( 2 )]
